# samono

./: .gitignore  Anchor.toml  README.md  application-draft.md  architecture.md  claude-session.jsonl  copilot-analysis.md  middleware.ts  next.config.ts  package-lock.json  package.json  reasoning.md  vercel.json
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/concept-c/: page.tsx
app/dashboard/: page.tsx
app/leaderboard/: page.tsx
app/referral/: page.tsx
app/wallet/: page.tsx
app/watch/: page.tsx
components/: AchievementCard.tsx  ActivityStream.tsx  ClaimButton.tsx  ClientWalletButton.tsx  ConditionalFooter.tsx  ConditionalNavbar.tsx  DashboardClient.tsx  Footer.tsx  LeaderboardTable.tsx  LevelBadge.tsx  LoginOverlay.tsx  Navbar.tsx  RegisterForm.tsx  SessionProgress.tsx  StatsBar.tsx  StellarWalletProvider.tsx  SwapPointsClient.tsx  VideoCard.tsx  WalletButton.tsx  XPProgressBar.tsx
components/nexus/: OrbitalRing.tsx  ProximityPanel.tsx  StatOrb.tsx
contracts/samono-token/: Cargo.toml
docs/: SUPABASE_WAITLIST_EMAIL_TEMPLATE.md  YOUTUBE_FETCHER.md
hooks/: useMousePosition.ts
lib/: dummy.ts  mock-point-swap.ts  utils.ts
lib/auth/: actions.ts  session.ts
lib/constants/: swap.ts
lib/dal/: activity.ts  leaderboard.ts  (+4 more)
programs/samono-swap/: Cargo.toml
programs/samono-swap/src/: lib.rs
scripts/: deploy-token.ts  seed-users.ts  setup-stellar.ts
services/: achievement-engine.ts  reward-engine.ts  session-validator.ts  xp-engine.ts
supabase/: schema.sql
types/: database.ts  solana.ts  stellar.ts
(+50 files in other folders)
