[package]
name = "samono-swap"
version = "0.1.0"
description = "Samono swap-points-for-SOL on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "samono_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
